--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
             border: 4px solid gray;
             border-style: groove;
             border-collapse: collapse;
-            margin: auto;}
+            margin: auto;
+            width: 750px;
+            height: 80px;
+            background-color: rgb(126, 227, 199);
+        
+        }
+
         td{
-            padding: 10px;}
+            padding: 10px;
+            font-size: larger;
+
+        }
     </style>
     <
-    <!-- custom css file link  -->
+    <!-- css file link  -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
