--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 
             <div class="box">
                 <h3>important links</h3>
-                <a href="#"> <i class="fas fa-caret-right"></i> parent Page</a>
-                <a href="#"> <i class="fas fa-caret-right"></i> school calendar</a>
+                <a href="#"> <i class="fas fa-caret-right"></i> Kindergarten calendar</a>
+                <a href="#"> <i class="fas fa-caret-right"></i> Kindergarten clothes</a>
                 <a href="#"> <i class="fas fa-caret-right"></i> lunch menu</a>
                 <a href="#"> <i class="fas fa-caret-right"></i> academics</a>
                 <a href="#"> <i class="fas fa-caret-right"></i> admissions</a>
@@ -188,7 +188,7 @@
             <div class="box">
                 <h3>category</h3>
                 <a href="#"> <i class="fas fa-caret-right"></i> about us</a>
-                <a href="#"> <i class="fas fa-caret-right"></i> news & events</a>
+                <a href="#"> <i class="fas fa-caret-right"></i> Parent resources</a>
                 <a href="#"> <i class="fas fa-caret-right"></i> contact us</a>
                 <a href="#"> <i class="fas fa-caret-right"></i> privacy policy</a>
                 <a href="#"> <i class="fas fa-caret-right"></i> FAQs</a> 
