--- a/index.html
+++ b/index.html
@@ -142,23 +142,23 @@
                 <img src="teach1.jpg" alt="">
                 <h3>Mariam Ali</h3>
                 <p>Math Teacher</p> 
-                <h2>Pno. 34987645</h2>
+                <h2>Phone no. 34987645</h2>
                 <h2>email. MA@gmail.com</h2>  
             </div>
 
             <div class="box">
-                <img src="teach2.jpg" alt="">
+                <img src="teacher1.jpg" alt="">
                 <h3>Yasmeen Noah</h3>
                 <p>Arabic Teacher</p>
-                <h2>Pno. 34987645</h2>
+                <h2>Phone no. 34987645</h2>
                 <h2>email. YN@gmail.com</h2> 
             </div>
 
             <div class="box">
                 <img src="teach3.jpg" alt="">
                 <h3>Jihan Imran</h3>
-                <p>instructor</p>
-                <h2>Pno. 34987645</h2>
+                <p>Class Teacher</p>
+                <h2>Phone no. 34987645</h2>
                 <h2>email. JI@gmail.com</h2> 
             </div>
 
