--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <a href="#"> <i class="fas fa-caret-right"></i> FAQs</a> 
             </div>
         </div>
-        <div class="credit"> &copy; 2024 by <span>Sunshine</span></div>
+        <div class="end"> 2024 - 2025 by <span>Sunshine Kindergarten</span></div>
     </section><!-- section ends -->
 
 </body>
