--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="box-container">
 
             <div class="box">
-                <h3> <i class="fas fa-school"></i> Kindergarten </h3>
+                <h3> Kindergarten </h3>
                 <p>a fun and informative webpage for
                     their classroom. providing important information and showcasing student activities</p>
             </div>
