--- a/index.html
+++ b/index.html
@@ -178,20 +178,20 @@
 
             <div class="box">
                 <h3>important links</h3>
-                <a href="#"> <i class="fas fa-caret-right"></i> Kindergarten calendar</a>
-                <a href="#"> <i class="fas fa-caret-right"></i> Kindergarten clothes</a>
-                <a href="#"> <i class="fas fa-caret-right"></i> lunch menu</a>
-                <a href="#"> <i class="fas fa-caret-right"></i> academics</a>
-                <a href="#"> <i class="fas fa-caret-right"></i> admissions</a>
+                <a href="#"> Kindergarten calendar</a>
+                <a href="#"> Kindergarten clothes</a>
+                <a href="#"> lunch menu</a>
+                <a href="#"> academics</a>
+                <a href="#"> admissions</a>
             </div>
 
             <div class="box">
                 <h3>category</h3>
-                <a href="#"> <i class="fas fa-caret-right"></i> about us</a>
-                <a href="#"> <i class="fas fa-caret-right"></i> Parent resources</a>
-                <a href="#"> <i class="fas fa-caret-right"></i> contact us</a>
-                <a href="#"> <i class="fas fa-caret-right"></i> privacy policy</a>
-                <a href="#"> <i class="fas fa-caret-right"></i> FAQs</a> 
+                <a href="#"> about us</a>
+                <a href="#"> Parent resources</a>
+                <a href="#"> contact us</a>
+                <a href="#"> privacy policy</a>
+                <a href="#"> FAQs</a> 
             </div>
         </div>
         <div class="end"> 2024 - 2025 by <span>Sunshine Kindergarten</span></div>
