--- a/index.html
+++ b/index.html
@@ -4,26 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kindergarten Class Website Assignment</title>
-
-    <style>
-        table, th, td{
-            border: 4px solid gray;
-            border-style: groove;
-            border-collapse: collapse;
-            margin: auto;
-            width: 750px;
-            height: 80px;
-            background-color: rgb(126, 227, 199);
-        
-        }
-
-        td{
-            padding: 10px;
-            font-size: larger;
-
-        }
-    </style>
+    <title>Kindergarten Class Website </title>
     <
     <!-- css file link  -->
     <link rel="stylesheet" href="style.css">
@@ -43,6 +24,7 @@
         </nav>
     </header> <!-- ends for header section -->
 
+<!-- --------------------------------------------------------------------------------------------- -->
 
     <!-- home section -->
     <section class="home" id="home">
@@ -55,6 +37,7 @@
         <div class="image"><img src="home.png" alt=""></div>
         </section><!-- section home end -->
 
+<!-- --------------------------------------------------------------------------------------------- -->
 
     <!-- Weekly schedule section -->
     <section class="schedule" id="schedule">
@@ -105,8 +88,9 @@
                 <td>Fun</td>
                 <td>HAH</td> 
             </tr>
-        </table><!-- section ends -->
+</table><!-- section ends -->
 
+<!-- --------------------------------------------------------------------------------------------- -->
 
     <!-- gallery section starts -->
     <section class="gallery" id="gallery">
@@ -122,6 +106,8 @@
                 <img src="photo4.jpg" alt="">
         </div>
         </section><!-- section ends -->
+
+    <!-- --------------------------------------------------------------------------------------------- -->    
     
 
     <!-- Annoucment section starts -->
@@ -170,6 +156,8 @@
         </div>  
     </section><!-- section ends -->
 
+    <!-- --------------------------------------------------------------------------------------------- -->
+
 
     <!-- Teachers Information section start -->
     <section class="teacher" id="teacher">
@@ -202,6 +190,8 @@
 
         </div>
     </section><!-- section ends -->
+
+<!-- --------------------------------------------------------------------------------------------- -->    
 
 
     <!-- footer section starts -->
