--- a/index.html
+++ b/index.html
@@ -57,36 +57,36 @@
                 <td>ENG</td>
                 <td>Math</td>
                 <td rowspan="5">Lunch</td>
-                <td>Fun</td>
-                <td>HAH</td>
+                <td>Sport</td>
+                <td>Arabic</td>
             </tr>
             <tr>
               <th>Monday</th> 
-              <td>ENG</td>
+              <td>Islamic</td>
               <td>Math</td>
-              <td>Fun</td>
-              <td>HAH</td> 
+              <td>Music</td>
+              <td>Scince</td> 
             </tr>
             <tr>
               <th>Tuesday</th> 
               <td>ENG</td>
-                <td>Math</td>
+                <td>Scince</td>
                 <td>Fun</td>
-                <td>HAH</td> 
+                <td>Math</td> 
             </tr>
             <tr>
               <th>Wednesday</th>
-              <td>ENG</td>
-                <td>Math</td>
-                <td>Fun</td>
-                <td>HAH</td>   
+              <td>Math</td>
+                <td>ENG</td>
+                <td>Movie</td>
+                <td>Fun</td>   
             </tr>
             <tr>
               <th>Thursday</th>  
-              <td>ENG</td>
+              <td>Arabic</td>
                 <td>Math</td>
                 <td>Fun</td>
-                <td>HAH</td> 
+                <td>Music</td> 
             </tr>
 </table><!-- section ends -->
 
