--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="box">
                 <h3> Kindergarten </h3>
                 <p>a fun and informative webpage for
-                    their classroom. providing important information and showcasing student activities</p>
+                    their classroom. providing important information and showcasing student activities.</p>
             </div>
 
             <div class="box">
